--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 VITE_ZENDESK_KEY=3035b960-4ebb-4024-b301-2cc9966f088d
+VITE_EMAILJS_TEMPLATE_ID=zepto_template_ivzhjnf
+VITE_EMAILJS_SERVICE_ID=zepto_service_ugmln2a
+VITE_EMAILJS_PUBLIC_KEY=5Yat8qUG0lo9avjxi
